--- a/config-client.yml
+++ b/config-client.yml
@@ -20,7 +20,7 @@ eureka:
 server:
   port: 8202
 spring:
-  profiles: 
+  profiles: test
   application:
     name: HelloSpringCloud-provider-dept
 
